# ModESP

./: CHANGELOG.md  CMakeLists.txt  LITTLEFS_MIGRATION_CHECKLIST.md  README.md  archive_deprecated_ui_docs.bat  archive_deprecated_ui_docs.sh  build.bat  build.ps1  debug_onewire.txt  enable_psram.sh  fix_build.bat  flash.bat  idf_component.yml  idf_component.yml.backup  main.cpp  main.py  no_exceptions_config.txt  partitions.csv  psram_recommendations.md  run_tests.bat  run_tests.sh  sdkconfig  sdkconfig.defaults  sdkconfig.old  wifi_manager.cpp  wifi_manager.h  wifi_manager.py
Docs/: Core.txt  (+37 more)
components/ESPhal/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/ESPhal/boards/: custom_board.h  rev_a_refrigerator.h  rev_b_ripening_chamber.h  rev_c_display_unit.h
components/ESPhal/include/: board_config.h  esphal.h  hal_interfaces.h  i2c_interfaces.h  onewire_impl.h
components/ESPhal/modules/actuator_module/: CMakeLists.txt
components/ESPhal/modules/actuator_module/include/: actuator_module.h
components/ESPhal/modules/actuator_module/src/: actuator_module.cpp
components/ESPhal/modules/rtc_module/: CMakeLists.txt  Kconfig  rtc_module.cpp  rtc_module.h
components/ESPhal/modules/rtc_module/include/: rtc_module.h
components/ESPhal/modules/sensor_module/: CMakeLists.txt  Kconfig  idf_component.yml
components/ESPhal/modules/sensor_module/include/: sensor_module.h
components/ESPhal/modules/sensor_module/src/: sensor_module.cpp
components/ESPhal/modules/storage_module/: CMakeLists.txt
components/ESPhal/src/: esphal.cpp  onewire_impl.cpp
components/_archive_ui/old_ui_system/: CMakeLists.txt
components/_archive_ui/old_ui_system/include/: api_dispatcher.h  web_ui_module.h
components/_archive_ui/old_ui_system/src/: api_dispatcher.cpp  dynamic_menu_builder.cpp  web_ui_module.cpp
components/adaptive_ui/: CMakeLists.txt  README.md  lazy_component_loader.cpp  ui_filter.cpp
components/adaptive_ui/examples/: web_ui_example.cpp
components/adaptive_ui/include/: lazy_component_loader.h  module_manager_adaptive.h  ui_component_base.h  ui_filter.h
components/core/: CMakeLists.txt  Kconfig.projbuild  README.md  REORGANIZATION_COMPLETE.md  application.cpp  application.h  application_wrapper.cpp  config_manager.cpp  config_manager.h  event_bus.cpp  event_bus.h  idf_component.yml  json_validator.h  module_manager.cpp  module_manager.h  module_registry.cpp  module_registry.h  shared_state.cpp  shared_state.h
components/core/configs/: README.md  actuators.json  actuators_custom_board.json  alarms.json  climate.json  default_config.json  freezer_config.json  heartbeat.json  inputs_custom_board.json  logging.json  network.json  relays.json  ripening_config.json  rtc.json  sensor.json  sensors.json  sensors_async.json  sensors_custom_board.json  system.json  ui.json  wifi.json
components/core/include/: generated_system_contract.h  json_rpc_interface.h  system_contract.h
components/core/schemas/: actuator_module_schema.json  sensor_module_schema.json
components/core/src/application/: application.cpp  application.h
components/core/src/config/: config_manager.cpp  config_manager.h  config_manager_async.cpp  config_manager_async.h
components/core/src/events/: event_bus.cpp  event_bus.h  event_helpers.h
components/core/src/modules/: module_heartbeat.cpp  module_heartbeat.h  module_lifecycle.cpp  module_lifecycle.h  module_manager.cpp  module_manager.h
components/core/src/state/: shared_state.cpp  shared_state.h
components/core/utils/: diagnostic_tools.cpp  diagnostic_tools.h  error_handling.h  manifest_reader.cpp  manifest_reader.h
components/sensor_drivers/: CMakeLists.txt  Kconfig  README.md  module_descriptor.json  module_manifest.json  module_manifest_full.json  module_manifest_old.json  sensor_manager_adaptive.h  sensors.json  ui_schema.json
components/sensor_drivers/ds18b20/: CMakeLists.txt
components/sensor_drivers/ds18b20/include/: ds18b20_driver.h
components/sensor_drivers/ds18b20/src/: ds18b20_driver.cpp
components/sensor_drivers/ds18b20_async/: CMakeLists.txt  README.md  ds18b20_driver_manifest.json
components/sensor_drivers/ds18b20_async/include/: ds18b20_async_driver.h
components/sensor_drivers/ds18b20_async/src/: ds18b20_async_driver.cpp
components/sensor_drivers/gpio_input/: CMakeLists.txt
components/sensor_drivers/gpio_input/include/: gpio_input_driver.h
components/sensor_drivers/gpio_input/src/: gpio_input_driver.cpp
components/sensor_drivers/include/: sensor_driver_init.h  sensor_driver_interface.h  sensor_driver_registry.h
components/sensor_drivers/ntc/: CMakeLists.txt
components/sensor_drivers/ntc/include/: ntc_driver.h
components/sensor_drivers/ntc/src/: ntc_driver.cpp
components/sensor_drivers/pressure_4_20ma/: CMakeLists.txt
components/sensor_drivers/pressure_4_20ma/include/: pressure_4_20ma_driver.h
components/sensor_drivers/pressure_4_20ma/src/: pressure_4_20ma_driver.cpp
components/sensor_drivers/src/: driver_init.cpp  driver_init_old.cpp  sensor_driver_init.cpp
components/system_contract/: CMakeLists.txt  README.md  events.md  states.md  vscode_snippets.md
components/system_contract/examples/: temperature_monitoring.cpp
components/ui/: CMakeLists.txt
components/ui/include/: api_dispatcher.h  web_ui_module.h
components/ui/src/: web_ui_module.cpp
test/host/: CMakeLists.txt  test_event_bus.cpp  test_module_manager.cpp
test/host/mocks/: mock_esp_log.cpp  mock_esp_timer.cpp  mock_freertos.cpp
test/host/mocks/esp_idf/: esp_err.h  esp_log.h  esp_timer.h
test/integration_test/components/integration_tests/: CMakeLists.txt  integration_test_utils.cpp  test_error_scenarios.cpp  test_multicore.cpp  test_real_hardware.cpp  test_system_lifecycle.cpp  test_system_stress.cpp
test/logger/: CMakeLists.txt  test_logger_module.cpp
test/test_runner/: CMakeLists.txt  test_application.cpp  test_config_async.cpp  test_config_lifecycle.cpp  test_config_manager.cpp  test_event_bus.cpp  test_json_validator.cpp  test_logger.cpp  test_module_manager.cpp  test_runner.cpp  test_shared_state.cpp
(+279 files in other folders)
