# This is a documentation-only component
# No source files to compile

# Register as empty component so IDE recognizes the directory
idf_component_register()

# This component only contains documentation:
# - events.md - All system events documentation
# - states.md - All SharedState keys documentation  
# - examples/ - Usage examples
