idf_component_register(
    SRCS 
        "test_runner.cpp"
        "test_event_bus.cpp"
        "test_config_manager.cpp"
        "test_config_async.cpp"
        "test_module_manager.cpp"
        "test_shared_state.cpp"
        "test_json_validator.cpp"
        "test_logger.cpp"
    INCLUDE_DIRS "."
    REQUIRES 
        unity
        core
        base_module
        json
        logger
        joltwallet__littlefs
        vfs
    PRIV_REQUIRES
        freertos
        esp_timer
)
